Configure domain thebakestory.store and optimize AI deps

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 54.162.20.141 thebakestory.shop www.thebakestory.shop;
+    server_name 54.162.20.141 thebakestory.store www.thebakestory.store;
 
     # Redirect www to non-www (optional — remove if not needed)
     # if ($host = www.thebakestory.shop) {
