--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,9 @@ boto3>=1.34.0
 django-ses>=3.5.0
 dj-database-url>=2.1.0
 
-# ─── RAG Chatbot ──────────────────────────────────────────────────────────────
+# ─── RAG Chatbot (CPU Optimized) ───────────────────────────────────────────────
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch --index-url https://download.pytorch.org/whl/cpu
 langchain>=0.1.0
 langchain-community>=0.0.20
 langchain-groq>=0.0.1
