Final cleanup of domain references

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,8 @@ server {
     server_name 54.162.20.141 thebakestory.store www.thebakestory.store;
 
     # Redirect www to non-www (optional — remove if not needed)
-    # if ($host = www.thebakestory.shop) {
-    #     return 301 http://thebakestory.shop$request_uri;
+    # if ($host = www.thebakestory.store) {
+    #     return 301 http://thebakestory.store$request_uri;
     # }
 
     # Max upload size (for payment screenshots etc.)
