--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ Thumbs.db
 # ─── IDE ──────────────────────────────────────────────────────────────────────
 .vscode/
 .idea/
+
+# ─── Debug / Temp Scripts ─────────────────────────────────────────────────────
+debug_*.py
+fix_*.py
+test.txt
+data_backup.json
